# hackathon-code

./: README.md
be/: Dockerfile  compose.yaml  eslint.config.mjs  package.json
be/src/: app.module.ts  main.ts
be/src/dto/: request.dto.ts  response.dto.ts  user.dto.ts
be/src/features/battle/: battle.controller.ts  battle.module.ts  battle.service.ts
be/src/features/comment/: comment.controller.ts  comment.module.ts  comment.service.ts
be/src/features/indexer/: degenbank.service.ts  demo.service.ts  indexer.controller.ts  indexer.module.ts  indexer.service.ts  trading.service.ts  txs.processor.ts
be/src/features/manager/: manager.controller.ts  manager.module.ts  manager.service.ts
be/src/features/privy/: privy.service.ts
be/src/features/token/: token.controller.ts  token.module.ts  token.service.ts
be/src/features/upload/: upload.controller.ts  upload.module.ts  upload.service.ts
be/src/guards/: privy.guard.ts
be/src/idl/: bank.ts  idl.json
be/src/models/: balance.model.ts  battle.model.ts  comment.model.ts  index.ts  manager.model.ts  price.model.ts  token.model.ts  user-vault-position.model.ts  user.model.ts  usertxhistory.model.ts  vault.model.ts  vaultanalytics.model.ts  vaultbalance.model.ts  webhooktxs.model.ts
be/src/type/: helius.type.ts  raydium.type.ts
program/: Anchor.toml
program/programs/degen-bank/: Cargo.toml
program/programs/degen-bank/src/: battle.rs  context.rs  errors.rs  external.rs  jupiter.rs  lib.rs  vault.rs
program/tests/: create-vault.test.ts  degen-bank.test.ts  idl.ts  utils.ts
(+12 files in other folders)
